--- a/app/src/main/res/layout/fragment_input.xml
+++ b/app/src/main/res/layout/fragment_input.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".controllers.input.InputFragment">
+    tools:context=".controllers.input._top_level.InputFragment">
 
     <include
         android:id="@+id/horizontal_buttons"
