--- a/app/src/main/res/layout/fragment_input_pane_full_screen.xml
+++ b/app/src/main/res/layout/fragment_input_pane_full_screen.xml
@@ -4,6 +4,6 @@
     android:id="@+id/constraintlayout_input_pane"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".controllers.input.InputPaneFragment">
+    tools:context=".controllers.input.second_level.InputPaneFragment">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
