--- a/app/src/main/res/layout/fragment_input_horizontal_buttons.xml
+++ b/app/src/main/res/layout/fragment_input_horizontal_buttons.xml
@@ -6,7 +6,13 @@
 
     <Button
         android:id="@+id/button_foods"
-        style="@style/GreenHorizontalTab"
+        style="@style/GreenTab"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="2dp"
         android:text="foods"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/button_drinks"
@@ -15,7 +21,13 @@
 
     <Button
         android:id="@+id/button_drinks"
-        style="@style/GreenHorizontalTab"
+        style="@style/GreenTab"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="2dp"
         android:text="drinks"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/button_sides"
@@ -24,7 +36,13 @@
 
     <Button
         android:id="@+id/button_sides"
-        style="@style/GreenHorizontalTab"
+        style="@style/GreenTab"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="2dp"
         android:text="sides"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
