--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,26 +5,14 @@
         <item name="android:textColor">@color/purple_200</item>
     </style>
 
-    <style name="PurpleVerticalTab" parent="TextAppearance.AppCompat">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">0dp</item>
-        <item name="android:layout_marginTop">2dp</item>
-        <item name="android:layout_marginBottom">2dp</item>
-        <item name="android:layout_marginStart">1dp</item>
-        <item name="android:layout_marginEnd">1dp</item>
+    <style name="PurpleTab" parent="TextAppearance.AppCompat">
         <item name="android:gravity">center_vertical|center_horizontal</item>
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">@color/purple_200</item>
         <item name="android:background">@drawable/bg_purple_rounded</item>
     </style>
 
-    <style name="GreenHorizontalTab" parent="TextAppearance.AppCompat">
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginTop">2dp</item>
-        <item name="android:layout_marginBottom">2dp</item>
-        <item name="android:layout_marginStart">1dp</item>
-        <item name="android:layout_marginEnd">1dp</item>
+    <style name="GreenTab" parent="TextAppearance.AppCompat">
         <item name="android:gravity">center_vertical|center_horizontal</item>
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">@color/lime</item>
